fix overflow-x mobile

--- a/styles.css
+++ b/styles.css
@@ -1454,6 +1454,10 @@ html.dark #story {
 
 /* Mobile */
 @media (max-width: 768px) {
+  body{
+    overflow-x: hidden;
+  }
+
   .desktop-only {
     display: none;
   }
